--- a/style.css
+++ b/style.css
@@ -10,18 +10,77 @@ body {
 	height: 100%;
 }
 
-img {
-	width:49%;
-}
-
 button {
-	height: 50px;
-	width: 200px;
+	height: 30px;
+	width: 100px;
+	border-radius: 50px;
 	background-color: dodgerblue;
 	color: white;
-	font-size: 20px;
+	position: relative;
+	left: 200px;
+	margin: 10px;
 }
 
+/* for pc */
+@media only screen and (min-device-width: 1024px) {
+	#box {
+		display: flex;
+		/* background-color: red; */
+		width: 100%;
+		height: 70%;
+	}
+	#box-one {
+		background-color: yellow;
+		width: 20%;
+		height: auto;
+		border: 2px solid dodgerblue;
+	}
+	#box-two {
+		background-color: aqua;
+		width: 20%;
+		border: 2px dashed greenyellow;
+		height: auto;
+	}
+
+	#box img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+
+/* for small devices */
 body {
 	background-color: #121212;
 }
+@media only screen and (max-width: 600px) {
+	#box {
+		display: flex;
+		/* background-color: red; */
+		width: 100%;
+		height: 70%;
+	}
+	#box-one {
+		background-color: yellow;
+		width: 50%;
+		height: auto;
+		border: 2px solid dodgerblue;
+	}
+	#box-two {
+		background-color: aqua;
+		width: 50%;
+		border: 2px dashed greenyellow;
+		height: auto;
+	}
+
+	#box img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	button {
+		left: 10px;
+	}
+}
+
+
